--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="https://image.flaticon.com/icons/svg/2667/2667252.svg" />
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/01k0/bw/master/public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
@@ -21,6 +21,7 @@
     -->
     <title>_o1ko_</title>
   </head>
+  <link rel="shortcut icon" href="favicon.ico"/>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
